--- a/index.html
+++ b/index.html
@@ -124,36 +124,43 @@
                 <div class="course__image">
                     <img src="images/course1.jpg" alt="">
                 </div>
-                <h4>Responsive Social Media Website UI Design</h4>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas optio voluptates neque placeat iusto fugiat iure?
-                </p>
-                <a href="courses.html" class="btn btn_primary">Learn More</a>
+                <div class="course__info">
+                        <h4>Responsive Social Media Website UI Design</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas optio voluptates neque placeat iusto fugiat iure?
+                    </p>
+                    <a href="courses.html" class="btn btn_primary">Learn More</a>
+                </div>         
             </article>
 
             <article class="course">
                 <div class="course__image">
                     <img src="images/course2.jpg" alt="">
                 </div>
-                <h4>Responsive Social Media Website UI Design</h4>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas optio voluptates neque placeat iusto fugiat iure?
-                </p>
-                <a href="courses.html" class="btn btn_primary">Learn More</a>
+                <div class="course__info">
+                    <h4>Responsive SmartHome Website Design</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas optio voluptates neque placeat iusto fugiat iure?
+                    </p>
+                    <a href="courses.html" class="btn btn_primary">Learn More</a>
+                </div>
             </article>
 
             <article class="course">
                 <div class="course__image">
                     <img src="images/course3.jpg" alt="">
                 </div>
-                <h4>Responsive Social Media Website UI Design</h4>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas optio voluptates neque placeat iusto fugiat iure?
-                </p>
-                <a href="courses.html" class="btn btn_primary">Learn More</a>
+                <div class="course__info">
+                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas optio voluptates neque placeat iusto fugiat iure?
+                    </p>
+                    <a href="courses.html" class="btn btn_primary">Learn More</a>
+                </div>
             </article>
         </div>
     </section>
+<!--========================== END OF COURSES =============================-->
 
 <script src="main.js"></script>
 </body>
