Faqs and Testimonials completed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+    <!-- SWIPER JS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+
 </head>
 <body>
     <nav>
@@ -162,6 +165,283 @@
     </section>
 <!--========================== END OF COURSES =============================-->
 
+    <section class="faqs">
+        <h2>Frequently Asked Questions</h2>
+        <div class="container faqs__container">
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>How do I know the right courses for me?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>Do I get a certificate for every course I take?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>Do I get a refund if the course isn't worth my money?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>Will I have a lifetime access to courses I Purchase?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>Will you assist me to get my first job?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>What are your payment options?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>What are the requirements to start?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>Do I get all source code from projects?</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at, harum ex delectus cupiditate tempore culpa modi beatae quibusdam sapiente quis velit unde distinctio minus reiciendis, quidem ea, quas quae.
+                    </p>
+                </div>
+            </article>
+        </div>
+    </section>
+
+<!--========================== END OF FAQs =============================-->
+
+    <section class="container testimonials__container mySwiper">
+        <h2>Students Testimonials</h2>
+        <div class="swiper-wrapper">
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar1.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Diane Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar2.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Ernest Achiever</h5>
+                    <small>Web Developer</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar3.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Sultan Akintunde</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar4.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Janet Twist</h5>
+                    <small>Model</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar5.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Jane Manager</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar8.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Alex Detunji</h5>
+                    <small>Web Developer</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="images/avatar7.jpg" alt="">
+                </div>
+                <div class="testimonial__info">
+                    <h5>Monalisa Camden</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial__body">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur dignissimos deserunt sapiente quo aperiam illum ipsa quam omnis quas, voluptatem temporibus eos. Eligendi commodi est similique, in accusamus harum modi?
+                    </p>
+                </div>
+            </article>
+        </div>
+        <div class="swiper-pagination"></div>
+    </section>
+
+<!--========================== TESTIMONIALS =============================-->
+
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__1">
+                <a href="index.html" class="footer__logo"><h4>SMARTY</h4></a>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium reiciendis illo voluptas?
+                </p>
+            </div>
+
+            <div class="footer__2">
+                <h4>Permalinks</h4>
+                <ul class="permalinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__3">
+                <h4>Privacy</h4>
+                <ul class="privacy">
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and conditions</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__4">
+                <h4>Contact Us</h4>
+                <div>
+                    <p>+234 777 888 9995</p>
+                    <p>Info@smarty.com</p>
+                </div>
+
+                <ul class="footer__socials">
+                    <li>
+                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="uil uil-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer__copyright">
+                <small>Copyright &copy; Dyn4casie 2023</small>
+            </div>
+        </div>
+    </footer>
+
+<!--========================== END FOOTER =============================-->
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="main.js"></script>
+
+<script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1,
+      spaceBetween: 30,
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      //when window width is >= 600px
+      breakpoints: {
+        600: {
+            slidesPerView: 2,
+        }
+      }
+    });
+</script>
 </body>
 </html>
