--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
         <div class="swiper-pagination"></div>
     </section>
 
-<!--========================== TESTIMONIALS =============================-->
+<!--========================== END OF TESTIMONIALS =============================-->
 
-    <footer class="footer">
+    <footer>
         <div class="container footer__container">
             <div class="footer__1">
                 <a href="index.html" class="footer__logo"><h4>SMARTY</h4></a>
@@ -415,14 +415,14 @@
                     </li>
                 </ul>
             </div>
-
-            <div class="footer__copyright">
-                <small>Copyright &copy; Dyn4casie 2023</small>
-            </div>
+        </div>
+        
+        <div class="footer__copyright">
+            <small>Copyright &copy; Dyn4casie 2023</small>
         </div>
     </footer>
 
-<!--========================== END FOOTER =============================-->
+<!--========================== END OF FOOTER =============================-->
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="main.js"></script>
