about page html and css

--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
         <div class="swiper-wrapper">
             <article class="testimonial swiper-slide">
                 <div class="avatar">
-                    <img src="images/avatar1.jpg" alt="">
+                    <img src="images/avatar10.jpg" alt="">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Diane Ayi</h5>
+                    <h5>Fortune Ayi</h5>
                     <small>Student</small>
                 </div>
                 <div class="testimonial__body">
@@ -416,7 +416,7 @@
                 </ul>
             </div>
         </div>
-        
+
         <div class="footer__copyright">
             <small>Copyright &copy; Dyn4casie 2023</small>
         </div>
