aligned team member info properly

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 
 
 
- <!-- ================END OF ACHIEVEMENT========== -->
+ <!-- =================== END OF ACHIEVEMENT ================= -->
 
 
 
@@ -93,7 +93,7 @@
                 <img src="./images/tm1.jpg" alt="">
             </div>
             <div class="team__member-info">
-                <h4>Creative Heesak</h4>
+                <h4>Alex Capoite</h4>
                 <p>Expert Tutor</p>
             </div>
             <div class="team__member-socials">
@@ -125,7 +125,7 @@
                 <img src="./images/tm3.jpg" alt="">
             </div>
             <div class="team__member-info">
-                <h4>Diana Ayi</h4>
+                <h4>Diana Ayua</h4>
                 <p>Expert Tutor</p>
             </div>
             <div class="team__member-socials">
