completed courses page and reduced the margin

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Smarty Education Website Using HTML, CSS $ Javascript</title>
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
     
     <!--iconscout cdn below-->
     
@@ -16,9 +17,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <!-- SWIPER JS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
 </head>
 <body>
@@ -36,6 +34,8 @@
         </div>
     </nav>
 <!--========================== END OF NAVBAR =============================-->
+
+
 
 
 <footer>
@@ -97,24 +97,7 @@
 
 <!--========================== END OF FOOTER =============================-->
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="main.js"></script>
 
-<script>
-var swiper = new Swiper(".mySwiper", {
-  slidesPerView: 1,
-  spaceBetween: 30,
-  pagination: {
-    el: ".swiper-pagination",
-    clickable: true,
-  },
-  //when window width is >= 600px
-  breakpoints: {
-    600: {
-        slidesPerView: 2,
-    }
-  }
-});
-</script>
 </body>
 </html>
