--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Smarty Education Website Using HTML, CSS $ Javascript</title>
 
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/contact.css">
     
     <!--iconscout cdn below-->
     
@@ -36,6 +36,57 @@
 <!--========================== END OF NAVBAR =============================-->
 
 
+    <section class="contact">
+        <div class="container contact__container">
+            <aside class="contact__aside">
+                <div class="aside__image">
+                    <img src="./images/contact.svg">
+                </div>
+                <h2>Contact Us</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni 
+                    laborum distinctio, fugit nemo facilis explicabo velit sit ea et a.
+                </p>
+                <ul class="contact__details">
+                    <li>
+                        <i class="uil uil-phone-times"></i>
+                        <h5>+234 777 888 9995</h5>
+                    </li>
+                    <li>
+                        <i class="uil uil-envelope"></i>
+                        <h5>info@smarty.com</h5>
+                    </li>
+                    <li>
+                        <i class="uil uil-location-point"></i>
+                        <h5>Ibadan, Nigeria</h5>
+                    </li>
+                </ul>
+                <ul class="contact__socials">
+                    <li><a href="https://facebook.com"><i class="uil uil-facebook-f"></i></a></li>
+
+                    <li><a href="https://www.instagram.com"><i class="uil uil-instagram"></i></a></li>
+
+                    <li><a href="https://twitter.com"><i class="uil uil-twitter"></i></a></li>
+
+                    <li><a href="https://linkedin.com"><i class="uil uil-linkedin"></i></a></li>
+                </ul>
+            </aside> 
+
+
+
+            <form action="https://formspree.io/f/xgebynyg"
+            method="POST" class="contact__form">
+                <div class="form__name">
+                    <input type="text" name="First Name" placeholder="First Name" required>
+
+                    <input type="text" name="Last Name" placeholder="Last Name" required>
+                </div>
+                <input type="email" name="Email Address" placeholder="Your Email Address" required>
+                <textarea name="Message"  rows="7" placeholder="Message" required></textarea>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form> 
+        </div>
+    </section>
 
 
 <footer>
