--- a/contact.html
+++ b/contact.html
@@ -74,8 +74,7 @@
 
 
 
-            <form action="https://formspree.io/f/xgebynyg"
-            method="POST" class="contact__form">
+            <form action="https://formspree.io/f/mdovzvgv" method="POST" class="contact__form">
                 <div class="form__name">
                     <input type="text" name="First Name" placeholder="First Name" required>
 
